Colab을 통해 생성됨

--- a/7_class_method_member_object.ipynb
+++ b/7_class_method_member_object.ipynb
@@ -150,7 +150,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OYhS0oyYjMfq",
-        "outputId": "ad2ecfe9-7fb1-4005-82a9-728886a311f8"
+        "outputId": "01b7ca3b-5f0b-41ca-d199-78db52718e25"
       },
       "execution_count": null,
       "outputs": [
@@ -162,7 +162,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 4
         }
       ]
     },
@@ -177,7 +177,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EacINpMAjPmJ",
-        "outputId": "f609ace3-f974-4f8e-d7c4-969f00b530bc"
+        "outputId": "5efaf26c-1176-4321-d10f-14bbe6796cc5"
       },
       "execution_count": null,
       "outputs": [
@@ -189,7 +189,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 5
         }
       ]
     },
@@ -203,7 +203,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tPlCOf_GkNnk",
-        "outputId": "0865a4cb-fcfc-4a3b-b5e3-67075fd6afa1"
+        "outputId": "5ab8da46-de74-451a-a5d3-eaca0f5f1eb4"
       },
       "execution_count": null,
       "outputs": [
@@ -215,7 +215,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 6
         }
       ]
     },
@@ -229,7 +229,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TDsOmm0lkbiz",
-        "outputId": "9045a66a-bf57-4127-cd6e-a24e98c6c2d2"
+        "outputId": "35790a17-bdbe-4d62-813e-14428b0de5ce"
       },
       "execution_count": null,
       "outputs": [
@@ -241,7 +241,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 7
         }
       ]
     },
@@ -264,7 +264,14 @@
         ">\n",
         "- <font color = 'gray'> When you call add on an instance of FourCal, Python automatically passes the instance as the first argument (self), so you can access instance variables and other methods within the class.\n",
         ">\n",
-        "- Without self, the method wouldn't have access to instance variables, and it wouldn't know which instance of the class to operate on when called. Therefore, self is necessary to maintain the object-oriented nature of the class and allow methods to interact with instance-specific data."
+        "- Without self, the method wouldn't have access to instance variables, and it wouldn't know which instance of the class to operate on when called. Therefore, self is necessary to maintain the object-oriented nature of the class and allow methods to interact with instance-specific data.\n",
+        "\n",
+        "self를 첫 번째 매개변수로 포함하는 이유:\n",
+        "add(self)는 인스턴스 메서드임을 나타냅니다.\n",
+        "인스턴스 메서드란, 클래스의 인스턴스(객체)를 기반으로 동작하며, 해당 객체에 저장된 데이터를 조작하거나 활용합니다.\n",
+        "self의 역할:\n",
+        "Python에서 메서드를 호출할 때, 호출한 객체가 자동으로 첫 번째 인수로 self에 전달됩니다.\n",
+        "이를 통해 메서드 내부에서 객체의 **속성(변수)**이나 다른 메서드에 접근할 수 있습니다."
       ],
       "metadata": {
         "id": "wadttJPWjRsa"
@@ -322,7 +329,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ITqdyj0al-vf",
-        "outputId": "a780e6c3-ed74-438a-b8e9-21923d7b3abb"
+        "outputId": "122687ae-f184-4789-ee07-d5d0c3b9eb77"
       },
       "execution_count": null,
       "outputs": [
@@ -334,7 +341,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 9
         }
       ]
     },
@@ -688,7 +695,7 @@
       ],
       "metadata": {
         "id": "5QQxUhfMo5TC",
-        "outputId": "9742cc00-d7ef-4728-f1a3-887ea1b12e2d",
+        "outputId": "669825bb-5e0f-4703-8075-f70c9000a386",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -766,7 +773,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qx_XpWvEtOG8",
-        "outputId": "ea67d4ee-a9b3-42a2-efc1-b3d51f5ca3cd"
+        "outputId": "490d591b-91a9-4670-9bea-1cdac2813a54"
       },
       "execution_count": null,
       "outputs": [
@@ -778,7 +785,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 13
         }
       ]
     },
@@ -915,7 +922,7 @@
           "height": 35
         },
         "id": "hoxWiYZ9GZhm",
-        "outputId": "0f3038ca-f677-4eac-a3d1-347f4618105b"
+        "outputId": "372585dc-3500-41bb-dfe4-3a4732e1819a"
       },
       "execution_count": null,
       "outputs": [
@@ -930,7 +937,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 30
+          "execution_count": 15
         }
       ]
     },
@@ -1245,7 +1252,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "M-bvTQUzABlR",
-        "outputId": "bbca95d9-047f-4841-c5d5-b3170c07adff"
+        "outputId": "1afe53bf-6200-478b-873e-c74c5b28dc5e"
       },
       "execution_count": null,
       "outputs": [
