Colab을 통해 생성됨

--- a/10_tokenization_variousways_revised.ipynb
+++ b/10_tokenization_variousways_revised.ipynb
@@ -15,7 +15,7 @@
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
-        "97f5664a0eae482da9593ebedd3fcf14": {
+        "378b234fad054e1c8aa97e84ff309f43": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HBoxModel",
           "model_module_version": "1.5.0",
@@ -30,13 +30,13 @@
             "_view_name": "HBoxView",
             "box_style": "",
             "children": [
-              "IPY_MODEL_9fb9dc50ce0a40d4aa8a32f50e413946",
-              "IPY_MODEL_457237986fa941cf8ec8895f69d945fc"
+              "IPY_MODEL_b3c9a2ac1d13446a9162c08069b170e8",
+              "IPY_MODEL_7e342fb645bd4313b72bcf07932cb22d"
             ],
-            "layout": "IPY_MODEL_4df3f7aafde94aed8521b33f5676cd32"
+            "layout": "IPY_MODEL_11bfe7dee8204c90946ab996f3c85342"
           }
         },
-        "9fb9dc50ce0a40d4aa8a32f50e413946": {
+        "b3c9a2ac1d13446a9162c08069b170e8": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ImageModel",
           "model_module_version": "1.5.0",
@@ -51,11 +51,11 @@
             "_view_name": "ImageView",
             "format": "png",
             "height": "600",
-            "layout": "IPY_MODEL_76a811636f5c4becb4538c82df5eb3b9",
+            "layout": "IPY_MODEL_ff9064c70df145948dbcbcd68c425d8f",
             "width": "700"
           }
         },
-        "457237986fa941cf8ec8895f69d945fc": {
+        "7e342fb645bd4313b72bcf07932cb22d": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "VBoxModel",
           "model_module_version": "1.5.0",
@@ -70,14 +70,14 @@
             "_view_name": "VBoxView",
             "box_style": "",
             "children": [
-              "IPY_MODEL_2777b306cfe549f0bf52e5b9784d0d78",
-              "IPY_MODEL_6f333dcc85d6464ca2dd3d6080ce9c00",
-              "IPY_MODEL_9629ebef1ea846a3b526ae0d3ef2c927"
+              "IPY_MODEL_5b16cdfd8f9f43ec85ffa9bb3d353582",
+              "IPY_MODEL_a12fbba47473408391b1d899a547f270",
+              "IPY_MODEL_51f334f8265149539103a9feb21fd1e7"
             ],
-            "layout": "IPY_MODEL_eab582c8b35942b1bda38daac561adf3"
+            "layout": "IPY_MODEL_c090e711822a410f82bd03d78f9a655c"
           }
         },
-        "4df3f7aafde94aed8521b33f5676cd32": {
+        "11bfe7dee8204c90946ab996f3c85342": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -129,7 +129,7 @@
             "width": null
           }
         },
-        "76a811636f5c4becb4538c82df5eb3b9": {
+        "ff9064c70df145948dbcbcd68c425d8f": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -181,7 +181,7 @@
             "width": null
           }
         },
-        "2777b306cfe549f0bf52e5b9784d0d78": {
+        "5b16cdfd8f9f43ec85ffa9bb3d353582": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ButtonModel",
           "model_module_version": "1.5.0",
@@ -198,12 +198,12 @@
             "description": "1",
             "disabled": false,
             "icon": "",
-            "layout": "IPY_MODEL_b9f71bfda8b14074b4a17c04cc306eda",
-            "style": "IPY_MODEL_92c62e49b8a84f8b8433f22012598060",
+            "layout": "IPY_MODEL_e0c4efe8fcac43e78c25b39501251af6",
+            "style": "IPY_MODEL_a2c2448e9d5c409787a7f456e5f665a3",
             "tooltip": ""
           }
         },
-        "6f333dcc85d6464ca2dd3d6080ce9c00": {
+        "a12fbba47473408391b1d899a547f270": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ButtonModel",
           "model_module_version": "1.5.0",
@@ -220,12 +220,12 @@
             "description": "2",
             "disabled": false,
             "icon": "",
-            "layout": "IPY_MODEL_b9f71bfda8b14074b4a17c04cc306eda",
-            "style": "IPY_MODEL_77dd5c5660b14f5297a7a586ab372007",
+            "layout": "IPY_MODEL_e0c4efe8fcac43e78c25b39501251af6",
+            "style": "IPY_MODEL_c1dc7be810a34667ba9cd5fc8bb9108e",
             "tooltip": ""
           }
         },
-        "9629ebef1ea846a3b526ae0d3ef2c927": {
+        "51f334f8265149539103a9feb21fd1e7": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ButtonModel",
           "model_module_version": "1.5.0",
@@ -242,12 +242,12 @@
             "description": "3",
             "disabled": false,
             "icon": "",
-            "layout": "IPY_MODEL_b9f71bfda8b14074b4a17c04cc306eda",
-            "style": "IPY_MODEL_85e1cfc6d42348a4aa2b8ff6441606d9",
+            "layout": "IPY_MODEL_e0c4efe8fcac43e78c25b39501251af6",
+            "style": "IPY_MODEL_8ee297a8072e411b98c1eed6ff8dc490",
             "tooltip": ""
           }
         },
-        "eab582c8b35942b1bda38daac561adf3": {
+        "c090e711822a410f82bd03d78f9a655c": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -299,7 +299,7 @@
             "width": null
           }
         },
-        "b9f71bfda8b14074b4a17c04cc306eda": {
+        "e0c4efe8fcac43e78c25b39501251af6": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -351,7 +351,7 @@
             "width": "50px"
           }
         },
-        "92c62e49b8a84f8b8433f22012598060": {
+        "a2c2448e9d5c409787a7f456e5f665a3": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ButtonStyleModel",
           "model_module_version": "1.5.0",
@@ -367,7 +367,7 @@
             "font_weight": ""
           }
         },
-        "77dd5c5660b14f5297a7a586ab372007": {
+        "c1dc7be810a34667ba9cd5fc8bb9108e": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ButtonStyleModel",
           "model_module_version": "1.5.0",
@@ -383,7 +383,7 @@
             "font_weight": ""
           }
         },
-        "85e1cfc6d42348a4aa2b8ff6441606d9": {
+        "8ee297a8072e411b98c1eed6ff8dc490": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ButtonStyleModel",
           "model_module_version": "1.5.0",
@@ -442,24 +442,24 @@
       ],
       "metadata": {
         "id": "Tj8kdbQDwcn3",
-        "outputId": "92758183-462c-44d5-b292-caea7b559f5c",
+        "outputId": "8bacd9e2-b63d-487a-d9b0-129943f597e6",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 416,
+          "height": 415,
           "referenced_widgets": [
-            "97f5664a0eae482da9593ebedd3fcf14",
-            "9fb9dc50ce0a40d4aa8a32f50e413946",
-            "457237986fa941cf8ec8895f69d945fc",
-            "4df3f7aafde94aed8521b33f5676cd32",
-            "76a811636f5c4becb4538c82df5eb3b9",
-            "2777b306cfe549f0bf52e5b9784d0d78",
-            "6f333dcc85d6464ca2dd3d6080ce9c00",
-            "9629ebef1ea846a3b526ae0d3ef2c927",
-            "eab582c8b35942b1bda38daac561adf3",
-            "b9f71bfda8b14074b4a17c04cc306eda",
-            "92c62e49b8a84f8b8433f22012598060",
-            "77dd5c5660b14f5297a7a586ab372007",
-            "85e1cfc6d42348a4aa2b8ff6441606d9"
+            "378b234fad054e1c8aa97e84ff309f43",
+            "b3c9a2ac1d13446a9162c08069b170e8",
+            "7e342fb645bd4313b72bcf07932cb22d",
+            "11bfe7dee8204c90946ab996f3c85342",
+            "ff9064c70df145948dbcbcd68c425d8f",
+            "5b16cdfd8f9f43ec85ffa9bb3d353582",
+            "a12fbba47473408391b1d899a547f270",
+            "51f334f8265149539103a9feb21fd1e7",
+            "c090e711822a410f82bd03d78f9a655c",
+            "e0c4efe8fcac43e78c25b39501251af6",
+            "a2c2448e9d5c409787a7f456e5f665a3",
+            "c1dc7be810a34667ba9cd5fc8bb9108e",
+            "8ee297a8072e411b98c1eed6ff8dc490"
           ]
         }
       },
@@ -474,7 +474,7 @@
             "application/vnd.jupyter.widget-view+json": {
               "version_major": 2,
               "version_minor": 0,
-              "model_id": "97f5664a0eae482da9593ebedd3fcf14"
+              "model_id": "378b234fad054e1c8aa97e84ff309f43"
             }
           },
           "metadata": {}
@@ -632,7 +632,7 @@
       "execution_count": null,
       "metadata": {
         "id": "qWcgp3AzSyi4",
-        "outputId": "ddb46288-653d-43c8-9c0c-68a53b7be52a",
+        "outputId": "13cd8407-49b9-487a-f2b3-d8770bc7ed8e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -738,7 +738,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KmxcgdqLBZpi",
-        "outputId": "dd9f24a5-4e93-422a-d6e0-3fc5ebec4f03"
+        "outputId": "66386a7d-acc2-4f33-f28c-a04412a2b741"
       },
       "execution_count": null,
       "outputs": [
@@ -771,7 +771,7 @@
       ],
       "metadata": {
         "id": "4odDoSnPS18k",
-        "outputId": "b2ac213d-352d-494e-d586-3b0aad2494a8",
+        "outputId": "fd1067a3-499e-49eb-97ea-5875447b8d2d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -878,7 +878,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Cjb4fEy4CKGE",
-        "outputId": "b982f79f-9ecd-4eac-ab46-2f9c12ae42b4"
+        "outputId": "7799f04f-8dd4-458e-812a-57eb3246b6ff"
       },
       "execution_count": null,
       "outputs": [
@@ -887,12 +887,12 @@
           "name": "stdout",
           "text": [
             "Cloning into 'NLP_2024'...\n",
-            "remote: Enumerating objects: 198, done.\u001b[K\n",
-            "remote: Counting objects: 100% (75/75), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (51/51), done.\u001b[K\n",
-            "remote: Total 198 (delta 45), reused 24 (delta 24), pack-reused 123 (from 1)\u001b[K\n",
-            "Receiving objects: 100% (198/198), 4.16 MiB | 18.75 MiB/s, done.\n",
-            "Resolving deltas: 100% (102/102), done.\n"
+            "remote: Enumerating objects: 237, done.\u001b[K\n",
+            "remote: Counting objects: 100% (114/114), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (90/90), done.\u001b[K\n",
+            "remote: Total 237 (delta 67), reused 24 (delta 24), pack-reused 123 (from 1)\u001b[K\n",
+            "Receiving objects: 100% (237/237), 6.91 MiB | 12.72 MiB/s, done.\n",
+            "Resolving deltas: 100% (124/124), done.\n"
           ]
         }
       ]
@@ -921,7 +921,7 @@
       ],
       "metadata": {
         "id": "IzJ3YrUeGlgk",
-        "outputId": "e782ac91-4610-42a9-d54f-5d91a77c4b5e",
+        "outputId": "ea4b7f27-28b4-4a5f-e286-b171f0a16d80",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -968,7 +968,7 @@
       ],
       "metadata": {
         "id": "hhePaTpMG9YH",
-        "outputId": "e3a00beb-120f-4400-e48d-cec59f04a355",
+        "outputId": "30707338-6172-47fd-f9ba-864fa76faa05",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -992,7 +992,7 @@
       ],
       "metadata": {
         "id": "iEXjpSBPDk0u",
-        "outputId": "f654be2d-d63c-49ef-e3fb-dc41a74bc9cd",
+        "outputId": "63dc0944-5ce5-4c57-80f5-33eed172a427",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
@@ -1906,7 +1906,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 10
         }
       ]
     },
@@ -2875,7 +2875,7 @@
       ],
       "metadata": {
         "id": "g9Pfw0_Thhka",
-        "outputId": "a585aa93-3392-4b96-8ddf-3746f2741e24",
+        "outputId": "64366075-6599-4720-962c-3464ded6b3b9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2928,7 +2928,7 @@
       ],
       "metadata": {
         "id": "Q1NIz986mFTA",
-        "outputId": "363e070b-a167-4aa5-d739-626d55a8ae68",
+        "outputId": "81faa5e8-77a2-4bd7-9061-3e9752a5a574",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2984,7 +2984,7 @@
       ],
       "metadata": {
         "id": "hYAWzvgbhiwd",
-        "outputId": "213b1b53-09ea-4c6f-b213-45b2c9023f4b",
+        "outputId": "84f2779b-d53b-45a4-e756-4ede5a9d4baf",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -3014,7 +3014,7 @@
       ],
       "metadata": {
         "id": "Kfxxv5cImhFa",
-        "outputId": "46d192e3-627c-43dc-c0f6-5a5a259e7b21",
+        "outputId": "e275c364-b5d6-4a40-c90d-4c9b8548b834",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -3066,7 +3066,7 @@
       ],
       "metadata": {
         "id": "aowUE2sTrAi6",
-        "outputId": "0505ce99-cda3-4901-ac16-17820fa82297",
+        "outputId": "2614c145-de89-4568-86ae-0bc7eb1cfdde",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -3097,7 +3097,7 @@
       ],
       "metadata": {
         "id": "6KvxuBHrhler",
-        "outputId": "00048527-2d2b-4805-fb21-614356fb1dd8",
+        "outputId": "0d80d37a-11a1-413d-9aae-3e2196d65d86",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -3157,7 +3157,7 @@
       ],
       "metadata": {
         "id": "BjKZYeOH5kMi",
-        "outputId": "4967f2c4-e752-48b8-df0b-44a89ee2a59e",
+        "outputId": "78df35e7-e461-446f-dd48-e376868a7a97",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
@@ -4173,7 +4173,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 17
         }
       ]
     },
@@ -4194,7 +4194,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TZlqNhz-Qs9T",
-        "outputId": "1dee24ec-ef5d-4c75-f550-77ab65a04446"
+        "outputId": "60d6a4d0-0353-4d89-bfee-e64e980f4b9a"
       },
       "execution_count": null,
       "outputs": [
@@ -5206,7 +5206,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 18
         }
       ]
     },
@@ -5243,7 +5243,7 @@
       ],
       "metadata": {
         "id": "zcfE8gZd4S9j",
-        "outputId": "d2743a89-6745-4f2a-fb09-0d7418be9e1f",
+        "outputId": "4c787ff2-7252-4aa7-de09-fcdb735d0051",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -5297,7 +5297,7 @@
       ],
       "metadata": {
         "id": "VDmNAzQJ69b5",
-        "outputId": "9f6ba926-7cc4-4e42-a556-4d2505d8045c",
+        "outputId": "e0019366-72c3-47cb-b25e-f2418525c282",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
@@ -6212,7 +6212,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 20
         }
       ]
     },
@@ -6253,7 +6253,7 @@
       ],
       "metadata": {
         "id": "rsZNA64a-xIB",
-        "outputId": "cb5cd702-31dc-47ec-cde5-d6cea0cfc9e1",
+        "outputId": "2522ed33-833c-4bf6-a6e3-d7ebfc65a437",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
@@ -7175,7 +7175,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 21
         }
       ]
     },
@@ -7189,7 +7189,13 @@
         "\n",
         "Stop words are common words like ‘the’, ‘and’, ‘I’, etc. that are very frequent in text, and so don’t convey insights into the specific topic of a document. We can remove these stop words from the text in a given corpus to clean up the data, and identify words that are more rare and potentially more relevant to what we’re interested in.\n",
         "\n",
-        "Text may contain stop words like ‘the’, ‘is’, ‘are’. Stop words can be filtered from the text to be processed. There is no universal list of stop words in nlp research, however the nltk module contains a list of stop words."
+        "Text may contain stop words like ‘the’, ‘is’, ‘are’. Stop words can be filtered from the text to be processed. There is no universal list of stop words in nlp research, however the nltk module contains a list of stop words.\n",
+        "\n",
+        "불용어(Stopwords)는 영어에서 문장의 의미에 큰 기여를 하지 않는 단어들입니다. 이러한 단어들은 문장의 의미를 희생하지 않고도 안전하게 무시할 수 있습니다. 예를 들어, the, he, have와 같은 단어들이 이에 해당합니다. 이러한 단어들은 이미 corpus라는 말뭉치에 포함되어 있으며, 이를 Python 환경에 다운로드하여 사용할 수 있습니다.\n",
+        "\n",
+        "불용어는 the, and, I와 같이 텍스트에서 매우 자주 등장하는 단어로, 문서의 특정 주제에 대한 통찰력을 제공하지 않습니다. 주어진 말뭉치에서 이러한 불용어를 제거하면 데이터를 정리하고, 더 희귀하면서 우리가 관심 있는 주제와 더 관련이 있는 단어들을 식별할 수 있습니다.\n",
+        "\n",
+        "텍스트에는 the, is, are와 같은 불용어가 포함될 수 있습니다. 이러한 불용어는 처리될 텍스트에서 필터링(제거)할 수 있습니다. NLP 연구에서 보편적인 불용어 목록은 존재하지 않지만, nltk 모듈에는 불용어 리스트가 포함되어 있습니다.\n"
       ],
       "metadata": {
         "id": "Paej0i2D_PRg"
