Colab을 통해 생성됨

--- a/14_word2vec.ipynb
+++ b/14_word2vec.ipynb
@@ -42,7 +42,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "M9jvterL0Tj-",
-        "outputId": "d723904c-cbad-42f0-bf63-69173934a4bd"
+        "outputId": "c67236e9-2c1a-4e70-e949-f178736c59ba"
       },
       "outputs": [
         {
@@ -75,7 +75,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "auTClxv05FXm",
-        "outputId": "39fcfded-133b-47bd-fdda-da6cb19122ce"
+        "outputId": "49ec4dd6-64f9-454b-b731-3a8f642d61fd"
       },
       "execution_count": null,
       "outputs": [
@@ -84,12 +84,12 @@
           "name": "stdout",
           "text": [
             "Cloning into 'NLP_2024'...\n",
-            "remote: Enumerating objects: 216, done.\u001b[K\n",
-            "remote: Counting objects: 100% (93/93), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (69/69), done.\u001b[K\n",
-            "remote: Total 216 (delta 57), reused 24 (delta 24), pack-reused 123 (from 1)\u001b[K\n",
-            "Receiving objects: 100% (216/216), 4.25 MiB | 16.81 MiB/s, done.\n",
-            "Resolving deltas: 100% (114/114), done.\n"
+            "remote: Enumerating objects: 243, done.\u001b[K\n",
+            "remote: Counting objects: 100% (120/120), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (96/96), done.\u001b[K\n",
+            "remote: Total 243 (delta 71), reused 24 (delta 24), pack-reused 123 (from 1)\u001b[K\n",
+            "Receiving objects: 100% (243/243), 7.05 MiB | 12.71 MiB/s, done.\n",
+            "Resolving deltas: 100% (128/128), done.\n"
           ]
         }
       ]
@@ -122,7 +122,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VcfdtW5PBGJ_",
-        "outputId": "bc9c9ae0-f9a2-49a7-de62-e2e0f20518e8"
+        "outputId": "d97bc60e-4d2a-4773-d434-e7788dc9be1b"
       },
       "execution_count": null,
       "outputs": [
@@ -130,7 +130,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "List of columns: ['Text']\n"
+            "Error: The file at '/content/NLP_2024/Sample_ClassActivity/4_Aesop4Children_CSV_BodyONY_Sample4ClassActivity.csv' was not found.\n"
           ]
         }
       ]
